[package]
name = "therustymod_snd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib", "staticlib"]

[dependencies]
ctor = "0.2.9"
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["rt"] }
vtable-rs = "0.1.4"
include_dir = "0.7.4"
serde = { version = "1.0.217", features = ["derive"] }
askama = "0.12.1"
hound = "3.5.1"
piper-rs = "0.1.9"
espeak-rs-sys = "0.1.9"
rodio = "0.20.1"
riff-wave = "0.1.3"
candle-transformers = "0.8.1"
surrealdb = { version = "2.1.4", features = ["kv-mem", "kv-rocksdb"] }
anyhow = "1.0.95"
candle-core = "0.8.1"
serde_json = "1.0.134"
async_once = "0.2.6"
tokenizers = "0.21.0"
hf-hub = "0.4.1"
candle-nn = "0.8.1"
futures = "0.3.31"

[dependencies.therustymod]
path = "../.."

[dependencies.therustymod_gen]
path = "../../libs/therustymod_gen"
